[package]
name = "zkbob-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libzkbob-rs = {git = "https://github.com/zkBob/libzkbob-rs", branch = "custody", features = ["native"]}
kvdb-rocksdb = "0.11.0"
tokio = { version="1.17", features=["rt","rt-multi-thread","sync"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng" ] }
serde = { version = "1.0.130", features = ["derive"] }
zkbob-utils-rs = { path = "../zkbob-utils-rs" }
thiserror = "1.0.37"
actix-http = "3.2.2"
actix-web = "4.2.1"
serde_json = "1.0.64"
config = "0.13.3"
actix-cors="0.6.2"
hex = { version = "0.4.3", features = ["serde"] }
actix-web-httpauth = "0.8.0"
rayon = "1.5.1"
web3= { git = "https://github.com/r0wdy1/rust-web3", branch = "logs_txhash" }
memo-parser = { git = "https://github.com/zkBob/memo-parser", branch = "main" }
redis = { version = "0.20.2", features = ["aio"] }
rsmq_async = "5.1.2"


[patch.crates-io]
libzeropool-zkbob = { git = "https://github.com/zkBob/libzeropool-zkbob", branch = "master" }